# it_camp2023

./: docker-compose.yml  pyproject.toml
docker/: aggregate.Dockerfile  ipr.Dockerfile  nodal.Dockerfile  pvt.Dockerfile  vlp.Dockerfile
src/: requirements.txt
src/aggregate/: config.py  main.py
src/aggregate/models/: models.py
src/aggregate/routes/: __init__.py  request_formers.py
src/aggregate/service_requests/: common.py  ipr.py  nodal.py  vlp.py
src/aggregate/tests/: test_routes.py
src/ipr/: main.py
src/ipr/models/: models.py
src/ipr/routes/: __init__.py
src/nodal_analysis/: main.py
src/nodal_analysis/models/: models.py
src/nodal_analysis/routes/: __init__.py
src/pvt/: main.py  service.py
src/pvt/formulas/: __init__.py  base.py  gas_params.py  mixes.py  oil_params.py
src/pvt/formulas/correlation/: __init__.py  base.py
src/pvt/formulas/correlation/phases/: __init__.py  abstract.py  gas.py  liq.py  mix.py  oil.py  wat.py
src/pvt/formulas/correlation/single_dependencies/gas/: __init__.py
src/pvt/formulas/correlation/single_dependencies/gas/saturated/: __init__.py
src/pvt/formulas/correlation/single_dependencies/oil/: __init__.py
src/pvt/formulas/correlation/single_dependencies/oil/saturated/: __init__.py
src/pvt/formulas/correlation/single_dependencies/oil/unsatuarated/: __init__.py
src/pvt/routes/: pvt.py
src/pvt/schemas/: pvt.py
src/vlp/: config.py  main.py
src/vlp/calculations/: pipe.py  vlp.py  well.py
src/vlp/routes/: vlp.py
src/vlp/schemas/: base.py
(+24 files in other folders)
